--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Airport</title>
 </head>
-<body>
+<body style="margin: 0;">
   <noscript>
     <strong>We're sorry but the app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
@@ -56,11 +56,11 @@ setTimeout(() => {
   worker.port.postMessage({
     action: 'resize',
     payload: {
-      width: window.innerWidth * 0.95,
-      height: window.innerHeight * 0.95,
+      width: window.innerWidth,
+      height: window.innerHeight,
     },
   });
-}, 3000);
+}, 2400);
 
 </script>
 
