feat: devServer available!

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@ const GRAY_300 = '#e2e2e2';
 const COLOR_NORM = '#19f7ff';
 const COLOR_FULL = '#de3d00';
 
+console.log('Airport: ', Airport);
+// console.log('Airport.app: ', Airport.app);
+
 Airport.app.init({
   // width: 800,
   // height: 600,
